fix height on mobiles

--- a/src/styles/app.module.css
+++ b/src/styles/app.module.css
@@ -7,9 +7,7 @@
   grid-template-areas: "nav-bar main-view" "now-playing-bar now-playing-bar";
   grid-template-columns: auto 1fr;
   grid-template-rows: 1fr auto;
-  height: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  height: 100dvh;
   position: relative;
   width: 100%;
 }
